# natural-time-c

./: .gitignore  CMakeLists.txt  Package.swift  README.md  build_parity
.github/workflows/: ci.yml
include/: natural_time.h
src/: natural_time.c
tests/unit/: test_parity_vectors.c  test_smoke.c
